pod-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-api
  labels:
    app: simple-api
spec:
  containers:
    - name: simple-api
      image: leandrochp/simple-node-api
      ports:
        - containerPort: 8080
          name: porta-api
      volumeMounts:
        - mountPath: /usr/src/app
          name: nome-do-volume
  volumes:
    - name: nome-do-volume
      emptyDir: {}
