pod-api.yml
apiVersion: v1
kind: Pod
metadata:
  name: "api-pod"
spec:
  containers:
  - name: "simple-api"
    image: leandrochp/simple-node-api
    resources:
      requests:
        memory: 128M
        cpu: 100m
      limits:
        memory: 256M
        cpu: 250m
    ports:
      - containerPort: 8080
