scalable-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-deploy
  labels:
    app: scalable-deploy
spec:
  revisionHistoryLimit: 5
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
    #type: Recreate
  selector:
    matchLabels:
      app: scalable-api
  template:
    metadata:
      labels:
        app: scalable-api
    spec:
      containers:
        - name: api-pod
          image: khaosdoctor/scalable-node-api:2.0.0
          ports:
            - containerPort: 8080
              name: api-port
