simple-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api-deploy
  labels:
    app: simple-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
        - name: simple-api
          image: khaosdoctor/simple-node-api
          ports:
            - containerPort: 8080
