pod-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-api-svc
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 8084
      nodePort: 30526
      targetPort: porta-api
