pod-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-api-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minhaapi.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pod-api-svc
                port:
                  number: 8085
