simple-api.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-api
  labels:
    app: simple-api
spec:
  containers:
    - name: simple-api
      image: leandrochp/node-simple-api
      ports:
        - containerPort: 8080
          name: porta-api
      volumeMounts:
        - mountPath: /usr/src/app
          name: nome-do-volume
  volumes:
    - name: nome-do-volume
      emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: simple-api-svc
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 8085
      nodePort: 30526
      targetPort: porta-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minhaapi.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-api-svc
                port:
                  number: 8085
